employee-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-api-service
  namespace: employee
spec:
  selector:
    app: employee-api
  ports:
  - port: 4000
    targetPort: 4000
